Fixed right panel bar overlapping text

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -235,13 +235,14 @@ main {
 .right-bar-list {
     padding: 0;
     margin: 0;
+    width: 75%;
 }
 
 .right-bar-items {
     list-style: none;
     border-radius: 5px;
     padding: 0.25rem 0.75rem;
-    width: 70%;
+    display:block;
 }
 
 .right-bar-items a {
@@ -249,9 +250,10 @@ main {
     color: rgba(0, 0, 0, 0.5);
     text-decoration: none;
     padding: 0.25rem 0.75rem;
-    width: 70%;
+    display: block;
     opacity: 0.7;
     transition: opacity 0.2s ease;
+    word-wrap: break-word;
 }
 
 .right-bar-items:hover {
